--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="com.projectx.jovanrudic.mhydrabanking.MainActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Thank you for your data :)" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_alignParentTop="true"
+        android:id="@+id/fragment_map_layout"
+        android:layout_alignParentLeft="true"
+        android:layout_margin="5dp"
+        android:layout_alignParentRight="true"
+        android:layout_height="wrap_content"
+        android:elevation="3dp">
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:id="@+id/map"
+              android:name="com.google.android.gms.maps.SupportMapFragment"
+              android:layout_width="match_parent"
+              android:layout_height="400dp"
+              tools:context="com.projectx.jovanrudic.mhydrabanking.MapsActivity"/>
+    </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Set as secure location"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:id="@+id/addToSecureLocationButtone"
+        android:layout_below="@+id/fragment_map_layout"
+        android:layout_centerHorizontal="true"/>
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:visibility="visible"
+            android:text="I agree with terms and conditions."
+            android:layout_below="@+id/addToSecureLocationButtone"
+            android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
